wip: jwt util class to create jwt in coming

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,4 +1,3 @@
-spring.application.name=validation
-spring.datasource.username=sla
-spring.datasource.password=123
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database=postgresql
+spring.jpa.show-sql=true
